--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,7 +3,7 @@ footer {
 	margin: 20px auto;
 	font-size: 1.2em;
 	max-width: 95%;
-	border-top: 1px solid $grey;
+	border-top: 1px solid #f2f2f2;
 }
 
 footer span {
@@ -18,23 +18,36 @@ footer li {
 	display: none;
     
     @media #{$brk-narrow}{
-    	footer li {
-		display: inline-block;
+    	display: inline-block;
 		float: left;
 		padding: 0 10px;
 		text-transform: capitalize;
-	   }
-    }
+	}
 }
 
-	.detailed-footer-bar {
-        @media #{$brk-narrow} {
-        float: right;
-        }
-    }
 
-	.simple-footer-bar a {
-        @media #{$brk-narrow} {
-		display: none;
-        }
+/*---- New Items -----*/
+
+
+.detailed-footer-bar {
+    @media #{$brk-narrow}{
+		float: right;
 	}
+}
+
+.simple-footer-bar a {
+    @media #{$brk-narrow}{
+		display: none;
+	}
+}
+
+
+
+
+/* ---- Float clearfix ---- */
+
+.clearfix::after {
+	content: " ";
+	display: table;
+	clear: both;
+}
