--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -6,9 +6,7 @@ footer {
 	border-top: 1px solid #f2f2f2;
 }
 
-footer span {
-	float: left;
-}
+footer { span { float: left; } }
 
 footer a {
 	float: right;
