--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,5 +1,5 @@
 // ==========================================================================
-// Base Imports
+// Layout/Container Imports
 // ==========================================================================
 
 @import'extends';
