--- a/css/style.css
+++ b/css/style.css
@@ -520,14 +520,14 @@ h2 {
   display: inline-block;
   padding: 5px 10px;
   background: #94a2af;
-  color: white;
+  color: #fff;
   margin: 6px; }
 
 .hobbies-list li {
   display: inline-block;
   padding: 5px 10px;
   background: #a1b1c1;
-  color: white;
+  color: #fff;
   margin: 6px; }
 
 /* ---- containers ---- */
